# recipe-app

./: README.md  compose.yml  docker-compose.yaml  package-lock.json
backend/: .dockerignore  .env  Cargo.toml  Dockerfile
backend/migrations/: 20240408113647_initial_migration_setup.sql
backend/src/: handlers.rs  main.rs
backend/src/controllers/: auth.rs  ingredient_controller.rs  mod.rs  recipe_controller.rs  recipe_ingredients.rs  user_controller.rs
backend/src/domain/: ingredient.rs  mod.rs  user.rs
backend/src/middlewares/: auth.rs  session.rs
backend/src/models/: ingredient.rs  mod.rs  recipe.rs  recipes_and_ingredients.rs  session.rs  user.rs
backend/src/utils/: hash.rs  mod.rs
db/: docker-compose.yaml
front/: Dockerfile  drizzle.config.ts  package-lock.json  package.json  svelte.config.js  tailwind.config.ts
front/drizzle/: 0000_left_iceman.sql  0001_legal_dragon_lord.sql  0002_magenta_runaways.sql  0004_tearful_toad_men.sql  0005_nice_lockjaw.sql  0006_gray_mockingbird.sql
front/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
front/drizzle/schemas/: schema.ts
front/src/: app.d.ts  app.html  hooks.server.ts
front/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
front/themes/: customtheme.ts
frontend/: .dockerignore  Dockerfile  index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
(+64 files in other folders)
