[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["full"] }
serde = {version = "1.0.197" , features = ["derive"]}
serde_json = {version = "1.0.115"}
axum = { features = ["default"], version = "0.7.5" }
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "time"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.37"
dotenv = "0.15.0"
rand = "0.8.5"